<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>
    <string name="app_name">Kit or Not</string>
    <string name="action_settings">Settings</string>
    <string name="kit_or_not">Kit Or Not?</string>
    <string name="cat_backside">Cat Backside</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="yourcats">Your Cats</string>
    <string name="addcatimage">addCatImage</string>
    <string name="title_activity_user_cat_details">UserCatDetails</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="catimage">catImage</string>
    <string name="thumbs_up">Thumbs up</string>
    <string name="thumbs_down">Thumbs down</string>
    <string name="person_cats">\'s cats</string>
    <string name="no_ratings">No ratings yet</string>
    <string name="sign_up_str">Sign Up</string>
    <string name="log_in_str">Log In</string>
    <string name="title_activity_top_cats">TopCatsActivity</string>
    <string name="title_activity_top_cat_details">TopCatDetails</string>
    <string name="contact">Contact: skow0020@gmail.com</string>
    <string name="menu_delete">DELETE</string>
    <string name="top_cats">Top Cats</string>
    <string name="cuteness">Cute Factor</string>
</resources>
