
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/relativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/kit_or_not"
        android:id="@+id/apptitle"
        android:textSize="40sp"
        android:textColor="#4258d2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:src="@drawable/loginicon"
        android:contentDescription="@string/cat_backside"
        android:layout_below="@+id/apptitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:autofillHints="@string/username"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/username"
        android:layout_below="@+id/logo"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/login_signup_btn"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@+id/logo"
        android:layout_toEndOf="@+id/login_signup_btn"
        android:autofillHints="@string/password"
        android:hint="@string/password"
        android:layout_alignBottom="@+id/username" />

    <Button   
        android:id="@+id/login_signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:onClick="signUpOrLogIn"
        android:text="@string/log_in" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/sign_up"
        android:id="@+id/login_signup_txt"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_signup_btn"
        android:paddingTop="14dp" />

    <TextView
        android:id="@+id/contact_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_signup_txt"
        android:layout_centerHorizontal="true"
        android:paddingTop="30dp"
        android:text="@string/contact"
        android:textSize="12sp" />
</RelativeLayout>
